# tasklib

./: CMakeLists.txt  README.md  make_single_header.sh  todo.txt
include/: config_flag.h  simple_flag.h  tasklib.h
src/: simple_flag.cpp  tasklib.cpp  tasklib_test.cpp
test/: tasklib_test.cpp
